# model_composer

./: README.md  pyproject.toml
config/: test_model.yaml
example/notebooks/: build_googlenet.ipynb
example/yaml/GoogLeNet/: model.yaml
example/yaml/GoogLeNet/config/: auxiliary_classifier_4a.yaml  auxiliary_classifier_4b.yaml  inception_3a.yaml  inception_3b.yaml  inception_4a.yaml  inception_4b.yaml  inception_4c.yaml  inception_4d.yaml  inception_4e.yaml  inception_5a.yaml  inception_5b.yaml  inception_hyperparams.yaml  inception_template.yaml
example/yaml/PointNetConv/: model.yaml
example/yaml/SimpleConceptual/: model.yaml
example/yaml/ToyExample/: model.yaml
src/model_composer/: __init__.py  cli.py  composer.py  registery.py  util.py
